tests/use_after_move3.stderr
Error: Potential use after move
    ╭─[preproccessed_file.c:1:1]
    │
 32 │     int *p2 = p1;
    │             ──┬─  
    │               ╰─── The value is moved here
 33 │     free(p1);
    │          ─┬  
    │           ╰── The value is used here after move
────╯